Fix color contrast accesibilty to buyers-sellers

--- a/scss/core/pages/property-detail.scss
+++ b/scss/core/pages/property-detail.scss
@@ -465,7 +465,7 @@
           width: 100%;
           position: relative;
           background-color: transparent;
-          color: $gris-intermedio;
+          color: #5A585F;
           border-right: 1px solid $gris-lineas;
           transition: all .3s;
           font-family: $opensans;
@@ -596,7 +596,7 @@
             //text-indent: -999999px;
             height: 40px;
             position: relative;
-            color: $gris-intermedio;
+            color: #5A585F;
             transition: all .3s;
 						font-family: $opensans;
 						font-size: 11px;
